Simplify inbound email verification
